tests/semantic/pass/implicit_conversion_char_int.c
int main(void) {
  char c;
  int i;
  c = 'a';
  i = c;
  return 0;
}
