tests/semantic/fail/selection_statement_block_scope2.c
int main(void) {
  if (0) {
      int a;
      a = 0;
    } 
  return a;
}
